fix issue with images on mobile

--- a/src/css/blocks/_dropdown.scss
+++ b/src/css/blocks/_dropdown.scss
@@ -52,22 +52,83 @@
     }
 }
 
+
+.dropdown {
+    display: block;
+    width: 100%;
+    height: 100vh;
+    max-height: 0;
+    z-index: 2;
+    overflow: hidden;
+
+    .column--expanded & {
+        display: block;
+    }
+}
+
+.dropdown__container {
+    width: 100%;
+    position: absolute;
+    left: 0;
+    overflow: hidden;
+    padding: 30px 0 0 0;
+
+    background: $white;
+    transform: scale(0);
+
+    @include breakpoint (large up) {
+        padding: 60px 0 0 0;
+        transition: transform 0.6s ease-out;
+    }
+
+    .column--expanded & {
+        transform: scale(1);
+    }
+}
+
+.dropdown__content {
+    padding: 0 0 30px 0;
+
+    &-excerpt {
+        font-size: 1.2em;
+        padding: 0px 0 0 0;
+
+        strong {
+            color: $black;
+        }
+
+        ul {
+            @extend .list-dots;
+            border-top: 1px solid $border;
+            margin: 30px 0 0 0;
+            padding: 30px 0 0 0;
+        }
+    }
+}
+
 .thumb {
     width: 100%;
-    height: 70vh;
+    height: 50vh;
     margin: 0;
     overflow: hidden;
     position: relative;
 
-    img {
-        // position: absolute;
-        // top: 50%;
-        // left: 50%;
-        // transform: translate(-50%, -50%);
+    @include breakpoint (medium up) {
+        height: 70vh;
+    }
 
-        min-height: 100%;
-        min-width: 100%;
+    img {
+        height: 50vh;
+        width: auto;
         max-width: 800%;
-        max-height: 800%;
+
+        @include breakpoint (medium up) {
+            height: auto;
+            min-height: 100%;
+            min-width: 100%;
+            max-width: 800%;
+            max-height: 800%;
+        }
+        
     }
 }
